--- a/server/deno.json
+++ b/server/deno.json
@@ -1,8 +1,8 @@
 {
   "tasks": {
-    "dev": "deno run --watch main.ts"
+    "dev": "deno run --watch ./src/main.ts"
   },
   "imports": {
-    "@std/assert": "jsr:@std/assert@1"
+    "better-auth": "npm:better-auth@^1.0.10"
   }
 }
