--- a/server/deno.json
+++ b/server/deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "dev": "deno serve --env-file --allow-net --allow-env --watch ./src/main.ts",
+    "dev": "deno serve --env-file --allow-scripts --allow-net --allow-env --allow-sys --allow-read --watch ./src/main.ts",
     "generate": "drizzle-kit generate",
     "push": "drizzle-kit push",
     "migrate": "drizzle-kit migrate",
