--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -6,6 +6,7 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
+    "allowImportingTsExtensions": true,
     "baseUrl": ".",
     "paths": {
         "@/*": ["./src/*"]
