feat: enhance Docker setup and monitoring scripts for PostgreSQL replication

--- a/apps/sync-automate/docker-monitor/Dockerfile
+++ b/apps/sync-automate/docker-monitor/Dockerfile
@@ -1,8 +1,11 @@
 # Use the official PostgreSQL 16 image
 FROM postgres:16
 
-# Install necessary packages
-RUN apt-get update && apt-get install -y bash
+# Install necessary packages including jq
+RUN apt-get update && apt-get install -y \
+    bash \
+    jq \
+    && rm -rf /var/lib/apt/lists/*
 
 # Copy the monitor-script.sh into the container
 COPY monitor-script.sh /usr/local/bin/monitor-script.sh
